<resources>
    <string name="app_name">Weekler</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Колот Юрий</string>
    <string name="nav_header_subtitle">8 (914)736 9914</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="export_desc">Экспорт событий в файл .ics</string>
    <string name="share_all_events_desc">Раздать доступ ко всем событиям</string>

    <string name="material_calendar_monday">Пн</string>
    <string name="material_calendar_tuesday">Вт</string>
    <string name="material_calendar_wednesday">Ср</string>
    <string name="material_calendar_thursday">Чт</string>
    <string name="material_calendar_friday">Пт</string>
    <string name="material_calendar_saturday">Сб</string>
    <string name="material_calendar_sunday">Вс</string>

    <string-array name="material_calendar_months_array">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <string name="client_secret">683480740903-atpdqv9v1sk69uimo07gcjj5jgq55pf5.apps.googleusercontent.com</string>

    <string name="event_name">Заголовок</string>
    <string name="event_details">Описание</string>
    <string name="event_share_link">Поделиться ссылкой</string>

    <string name="activation_hint">
        Для получения доступа к событию Вашего друга, необходимо получить у него токен активации.
        Попросите прислать его Вам, скопируйте, и вставьте в специальное поле. После успешной
        активации событие другого пользователя добавится в Ваш календарь.
    </string>

    <string name="MO">Пн</string>
    <string name="TU">Вт</string>
    <string name="WE">Ср</string>
    <string name="TH">Чт</string>
    <string name="FR">Пт</string>
    <string name="SA">Сб</string>
    <string name="SU">Вс</string>

    <string name="frequency_label">Повторяется раз в</string>
    <string name="by_day_label">Когда повторяется:</string>
    <string name="ended_at_label">Заканчивается:</string>
    <string name="never">Никогда</string>
    <string name="repeat_count">Повторить раз</string>

    <string name="access_read">Чтение</string>
    <string name="access_edit">Изменение</string>
    <string name="access_delete">Удаление</string>

    <string name="no_repeat">Не повторяется</string>
    <string name="daily">Каждый день</string>
    <string name="weekly">Каждую неделю</string>
    <string name="monthly">Каждый месяц</string>
    <string name="yearly">Каждый год</string>
    <string name="other">Другое</string>
</resources>
