<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <RadioButton
            android:id="@+id/rbNever"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_repeat"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/daily"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/weekly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weekly"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/monthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monthly"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/yearly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yearly"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/other"
            android:textSize="18sp" />
    </RadioGroup>
</RelativeLayout>