<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/frequency_label"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_interval"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:digits="0123456789"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:textColor="@color/elegant_color" />

            <Spinner
                android:id="@+id/spinner_frequency"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center"
                android:textColor="@color/elegant_color"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/by_day_label"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_mo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/MO" />

            <CheckBox
                android:id="@+id/cb_tu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/TU" />

            <CheckBox
                android:id="@+id/cb_we"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/WE" />

            <CheckBox
                android:id="@+id/cb_th"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/TH" />

            <CheckBox
                android:id="@+id/cb_fr"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/FR" />

            <CheckBox
                android:id="@+id/cb_sa"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SA" />

            <CheckBox
                android:id="@+id/cb_su"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/SU" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ended_at_label"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rg_ending_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/rb_never"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/never" />

            <RadioButton
                android:id="@+id/rb_until"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:text="" />

            <TextView
                android:id="@+id/tv_until"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="-25dp" />

            <RadioButton
                android:id="@+id/rb_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/repeat_count" />

            <EditText
                android:id="@+id/et_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="145dp"
                android:digits="0123456789"
                android:maxLength="2"
                android:layout_marginTop="-40dp"
                android:inputType="numberDecimal" />
        </RadioGroup>
    </LinearLayout>
</RelativeLayout>